# GeekCOM

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
packaging/linux/: geekcom.desktop  install-local.sh
resources/: GeekCOM.rc  resources.qrc
src/: HexUtils.cpp  HexUtils.h  MainWindow.cpp  MainWindow.h  SerialBaudRates.h  SerialDebugWidget.cpp  SerialDebugWidget.h  SerialManager.cpp  SerialManager.h  SerialPortConfigGroup.cpp  SerialPortConfigGroup.h  SerialTerminalWidget.cpp  SerialTerminalWidget.h  main.cpp
